Added project file and renamed some files
-Added VS Project Files for the first example
-Renamed Example files, because some IDE will think they are C Files and
use the C Compiler, but the example are using C++ builtin types like
bool and call functions that uses C++ stuff which will also leads to
errors.

--- a/windows/CIrrlicht/CIrrlicht/CIrrlicht.vcxproj
+++ b/windows/CIrrlicht/CIrrlicht/CIrrlicht.vcxproj
@@ -64,6 +64,9 @@
       <AdditionalLibraryDirectories>../../../irrlicht/lib/Win32-visualstudio;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>irrlicht.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>mv ../../../bin/$(ProjectName)_d</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
